--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3569,7 +3569,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #b3c2cf;
+  background-color: #428bca;
 }
 .nav-stacked > li {
   float: none;
